force-app/main/default/objects/Invertor_c__x/Invertor_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>X123</externalDataSource>
    <externalName>Invertor__c</externalName>
    <label>Invertor</label>
    <pluralLabel>Invertors</pluralLabel>
</CustomObject>