force-app/main/default/objects/Invertor_c__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <externalDeveloperName>Brand_Name__c</externalDeveloperName>
    <label>Account</label>
    <length>18</length>
    <referenceTargetField>Account.ExternalId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invertors</relationshipLabel>
    <relationshipName>Invertors1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>