force-app/main/default/objects/Invertor_c__x/fields/Email_c__c.field-meta.xml
<CustomField>
    <fullName>Email_c__c</fullName>
    <externalDeveloperName>Email__c</externalDeveloperName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>