force-app/main/default/objects/Invertor_c__x/fields/Invertor_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Invertor_Type_c__c</fullName>
    <externalDeveloperName>Invertor_Type__c</externalDeveloperName>
    <label>Invertor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Washing Machin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>