force-app/main/default/objects/Invertor_c__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Invertor Name</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>