force-app/main/default/objects/Invertor_c__x/fields/Price_c__c.field-meta.xml
<CustomField>
    <fullName>Price_c__c</fullName>
    <externalDeveloperName>Price__c</externalDeveloperName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>