force-app/main/default/objects/Invertor_c__x/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>User</label>
    <length>50</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>Invertors</relationshipLabel>
    <relationshipName>Invertors1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>